[tool.poetry]
name = "simplisafe-python"
version = "5.3.6"
description = "A Python3, async interface to the SimpliSafe API"
readme = "README.md"
authors = ["Aaron Bach <bachya1208@gmail.com>"]
license = "MIT"
repository = "https://github.com/bachya/simplisafe-python"
packages = [
    { include = "simplipy" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
indent = "    "
# by default isort don't check module indexes
not_skip = __init__.py
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_first_party = simplipy,tests
forced_separate = tests
combine_as_imports = true

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
python = "^3.6.1"
python-engineio = ">= 3.9.3"
python-socketio = ">=4.3.1"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
Sphinx = "^2.2.1"
aresponses = "^1.1.1"
bandit = "^1.6.2"
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.740"
pre-commit = "^1.20.0"
pylint = "^2.4.3"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
